Update java options to match v11